# cahnon

./: .gitignore  .trivyignore  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  knip.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.ts  wdio.conf.ts
.github/workflows/: deploy-website.yml
.husky/: pre-commit  pre-push
docs/: ARCHITECTURE.md  Cahnon_Functional_Specification.md
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test-data.cahnon
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  tests.rs  validation.rs
src-tauri/src/commands/: analytics.rs  annotation.rs  arc.rs  association.rs  bible.rs  chapter.rs  cut.rs  detection.rs  event.rs  export.rs  export_csv.rs  fact.rs  health.rs  history.rs  impact.rs  import.rs  issue.rs  mod.rs  name_registry.rs  project.rs  relationship.rs  saved_filter.rs  scene.rs  scene_context.rs  search.rs  snapshot.rs  stats.rs  template.rs  trash.rs  world_state.rs  writing_session.rs
src-tauri/src/database/: annotation.rs  arc.rs  bible.rs  chapter.rs  cut.rs  detection.rs  event.rs  export.rs  export_csv.rs  fact.rs  health.rs  impact.rs  issue.rs  macros.rs  mod.rs  name_registry.rs  project.rs  saved_filter.rs  scene.rs  scene_context.rs  schema.rs  search.rs  settings.rs  snapshot.rs  template.rs  timeline.rs  trash.rs  world_state.rs  writing_session.rs
src-tauri/src/database/scene/: crud.rs  history.rs  mapping.rs  mod.rs  operations.rs
website/: index.html  package-lock.json  package.json  vite.config.ts
(+112 files in other folders)
