[package]
name = "cahnon"
version = "0.1.0"
description = "Write freely. Stay consistent. A desktop application for fiction writers."
authors = ["Cahnon Contributors"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "cahnon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
directories = "5"
regex = "1"
hostname = "0.4"
once_cell = "1"

[dev-dependencies]
tempfile = "3"

